package practica01.Shapes;

public interface Operations {
    double getArea();
    double getPerimeter();
}
