package practica01.Shapes;

public abstract class Shape implements Operations {
    public abstract void  draw();
}
