@startuml

title __SHAPES's Class Diagram__\n

  namespace practica01 {
    namespace Shapes {
      class practica01.Shapes.Circle {
          - radius : int
          + Circle()
          + draw()
          + getArea()
          + getPerimeter()
      }
    }
  }
  

  namespace practica01 {
    namespace Shapes {
      interface practica01.Shapes.Operations {
          {abstract} + getArea()
          {abstract} + getPerimeter()
      }
    }
  }
  

  namespace practica01 {
    namespace Shapes {
      class practica01.Shapes.Rectangle {
          - height : int
          - width : int
          + Rectangle()
          + draw()
          + getArea()
          + getPerimeter()
      }
    }
  }
  

  namespace practica01 {
    namespace Shapes {
      abstract class practica01.Shapes.Shape {
          {abstract} + draw()
      }
    }
  }
  

  namespace practica01 {
    namespace Shapes {
      class practica01.Shapes.Triangle {
          - side1 : int
          - side2 : int
          - side3 : int
          + Triangle()
          + draw()
          + getArea()
          + getPerimeter()
          - getSemiPerimeter()
      }
    }
  }
  

  practica01.Shapes.Circle -up-|> practica01.Shapes.Shape
  practica01.Shapes.Rectangle -up-|> practica01.Shapes.Shape
  practica01.Shapes.Shape .up.|> practica01.Shapes.Operations
  practica01.Shapes.Triangle -up-|> practica01.Shapes.Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
